--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tickiting</title>
 </head>
 <body>
-  tickiting system under develop wait afew months   
+    <div class="top"> <P>Log Into  Helpdesk </P></div>
+    <div class="form">
+    <img src="icon2.png" alt="logo" class="img">
+    <p> USERNAME</p>
+    <input type="text" class="input">  
+    <p> PASSWORD</p>
+    <input type="text" class="input">
+    <div class="button"> <a href="index.html"  target="_blank" class="submit">Submit</a> </div>
+    </div>
+    
 </body>
 </html>
