--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="text" class="input">  
     <p> PASSWORD</p>
     <input type="text" class="input">
-    <div class="button"> <a href="index.html"  target="_blank" class="submit">Submit</a> </div>
+    <div class="button"> <a href="page.html"  target="_blank" class="submit">Submit</a> </div>
     </div>
     
 </body>
